fix: update order sorting validation, error handling, and tests